// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArmorShop /> should render ArmorShop page with empty armor array returned from server 1`] = `
<section
  className="ArmorShop"
>
  <ul
    className="ArmorShopList"
  />
</section>
`;

exports[`<ArmorShop /> should render ArmorShop page with results returned from server for armor 1`] = `
<section
  className="ArmorShop"
>
  <ul
    className="ArmorShopList"
  >
    <li
      className="ArmorShopListItem"
    >
      <div
        className="ArmorShopListItemContainer"
      >
        <p>
          <strong>
            Name
          </strong>
          : 
          test
        </p>
        <p>
          <strong>
            Type
          </strong>
          : 
          helmet
        </p>
        <p>
          <strong>
            Description
          </strong>
          : 
          Low tier trash
        </p>
        <p>
          <strong>
            Company
          </strong>
          :
           
          starscape systems
        </p>
        <p>
          <strong>
            Quality
          </strong>
          : 
          low
        </p>
        <p>
          <strong>
            Protection
          </strong>
          : 
          low
        </p>
        <p>
          <strong>
            Shield
          </strong>
          : 
          50
        </p>
        <p>
          <strong>
            Discount
          </strong>
          : 
          30
        </p>
        <p>
          <strong>
            Cost
          </strong>
          : 
          200
        </p>
        <small>
          Created By: 
          Freddy
        </small>
      </div>
      <div
        className="ArmorShopListItemContainer"
      >
        <form
          className="ArmorShopListForm"
          onSubmit={[Function]}
        >
          <div
            className="Input"
          >
            <label
              className="Label"
            >
              quantity
            </label>
            <input
              className="InputElement ArmorShopListFormElement"
              disabled={false}
              max={5}
              min={0}
              name="quantity"
              onChange={[Function]}
              step={1}
              type="number"
              value={0}
            />
          </div>
          <button
            className="ArmorShopAddToCartButton"
            disabled={true}
            onClick={[Function]}
            type="submit"
          >
            Add to Cart
          </button>
        </form>
      </div>
    </li>
  </ul>
</section>
`;

exports[`<ArmorShop /> should render ArmorShop page with results returned from server for armor with no stock 1`] = `
<section
  className="ArmorShop"
>
  <ul
    className="ArmorShopList"
  >
    <li
      className="ArmorShopListItem"
    >
      <div
        className="ArmorShopListItemContainer"
      >
        <p>
          <strong>
            Name
          </strong>
          : 
          test
        </p>
        <p>
          <strong>
            Type
          </strong>
          : 
          helmet
        </p>
        <p>
          <strong>
            Description
          </strong>
          : 
          Low tier trash
        </p>
        <p>
          <strong>
            Company
          </strong>
          :
           
          starscape systems
        </p>
        <p>
          <strong>
            Quality
          </strong>
          : 
          low
        </p>
        <p>
          <strong>
            Protection
          </strong>
          : 
          low
        </p>
        <p>
          <strong>
            Shield
          </strong>
          : 
          50
        </p>
        <p>
          <strong>
            Discount
          </strong>
          : 
          30
        </p>
        <p>
          <strong>
            Cost
          </strong>
          : 
          200
        </p>
        <small>
          Created By: 
          Freddy
        </small>
      </div>
      <div
        className="ArmorShopListItemContainer"
      >
        <form
          className="ArmorShopListForm"
          onSubmit={[Function]}
        >
          <div
            className="Input"
          >
            <label
              className="Label"
            >
              quantity
            </label>
            <input
              className="InputElement ArmorShopListFormElement"
              disabled={true}
              max={0}
              min={0}
              name="quantity"
              onChange={[Function]}
              step={1}
              type="number"
              value={0}
            />
          </div>
          <button
            className="ArmorShopAddToCartButton ArmorShopAddToCartButtonDisabled"
            disabled={true}
            onClick={[Function]}
            type="submit"
          >
            Out of Stock
          </button>
        </form>
      </div>
    </li>
  </ul>
</section>
`;

exports[`<ArmorShop /> updates quantity form state on input change 1`] = `
<section
  className="ArmorShop"
>
  <ul
    className="ArmorShopList"
  >
    <li
      className="ArmorShopListItem"
    >
      <div
        className="ArmorShopListItemContainer"
      >
        <p>
          <strong>
            Name
          </strong>
          : 
          test
        </p>
        <p>
          <strong>
            Type
          </strong>
          : 
          helmet
        </p>
        <p>
          <strong>
            Description
          </strong>
          : 
          Low tier trash
        </p>
        <p>
          <strong>
            Company
          </strong>
          :
           
          starscape systems
        </p>
        <p>
          <strong>
            Quality
          </strong>
          : 
          low
        </p>
        <p>
          <strong>
            Protection
          </strong>
          : 
          low
        </p>
        <p>
          <strong>
            Shield
          </strong>
          : 
          50
        </p>
        <p>
          <strong>
            Discount
          </strong>
          : 
          30
        </p>
        <p>
          <strong>
            Cost
          </strong>
          : 
          200
        </p>
        <small>
          Created By: 
          Freddy
        </small>
      </div>
      <div
        className="ArmorShopListItemContainer"
      >
        <form
          className="ArmorShopListForm"
          onSubmit={[Function]}
        >
          <div
            className="Input"
          >
            <label
              className="Label"
            >
              quantity
            </label>
            <input
              className="InputElement ArmorShopListFormElement"
              disabled={false}
              max={5}
              min={0}
              name="quantity"
              onChange={[Function]}
              step={1}
              type="number"
              value="5"
            />
          </div>
          <button
            className="ArmorShopAddToCartButton"
            onClick={[Function]}
            type="submit"
          >
            Add to Cart
          </button>
        </form>
      </div>
    </li>
  </ul>
</section>
`;
